--- a/test/fixtures/listings.yml
+++ b/test/fixtures/listings.yml
@@ -1,46 +1,55 @@
 orange:
+  title: "Hello"
   content: "I just ate an orange!"
   created_at: <%= 10.minutes.ago %>
   user: michael
 
 tau_manifesto:
+  title: "Hi"
   content: "Check out the @tauday site by @mhartl: http://tauday.com"
   created_at: <%= 3.years.ago %>
   user: michael
 
 cat_video:
+  title: "Hi"
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
   created_at: <%= 2.hours.ago %>
   user: michael
 
 most_recent:
+  title: "Hello"
   content: "Writing a short test"
   created_at: <%= Time.zone.now %>
   user: michael
 
 <% 30.times do |n| %>
 listing_<%= n %>:
+  title: <%= Faker::Lorem.sentence %>
   content: <%= Faker::Lorem.sentence(5) %>
   created_at: <%= 42.days.ago %>
   user: michael
 <% end %>
 
 ants:
+  title: "hey"
   content: "Oh, is that what you want? Because that's how you get ants!"
   created_at: <%= 2.years.ago %>
   user: archer
 
 zone:
+  title: "Hello"
   content: "Danger zone!"
   created_at: <%= 3.days.ago %>
   user: archer
 
 tone:
+  title: "hello"
   content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
   created_at: <%= 10.minutes.ago %>
   user: lana
 
 van:
+  title: "sorry"
   content: "Dude, this van's, like, rolling probable cause."
   created_at: <%= 4.hours.ago %>
   user: lana
